Instructions to run in CLI to generate ASCII image in PNG format
    * FIXME: Does not support formats other than PNG